# Scorpio

./: Cargo.toml
src/: lib.rs  main.rs
src/connection/: client.rs  server.rs
src/state/: state.rs
src/ui/: ui_builder.rs
