[package]
name = "Scorpio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "*"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
log = "*"
futures-channel = "0.3.28"
hyper = { version = "1.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1.27.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
env_logger = "0.11.5"
copypasta = "*"
glium = "*"
